--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -17,6 +17,7 @@
     <string name="add_to_note">Přidat k poznámce</string>
     <string name="unsaved_changes_warning">Máte nějaké neuložené změny. Co s nimi chcete udělat?</string>
     <string name="note_shown_widget">Poznámka zobrazená ve widgetu:</string>
+    <string name="show_note_title">Show note title</string>
     <string name="new_note_type">Typ nové poznámky:</string>
     <string name="text_note">Textová poznámka</string>
     <string name="lock_note">Lock note</string>
