--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -17,6 +17,7 @@
     <string name="add_to_note">Nota ekle</string>
     <string name="unsaved_changes_warning">Kaydedilmemiş bazı değişiklikleriniz var. Onlarla ne yapmak istersiniz?</string>
     <string name="note_shown_widget">Widget\'ta gösterilen not:</string>
+    <string name="show_note_title">Show note title</string>
     <string name="new_note_type">Yeni not türü:</string>
     <string name="text_note">Metin notu</string>
     <string name="lock_note">Lock note</string>
