--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="add_to_note">Add to note</string>
     <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
     <string name="note_shown_widget">Note shown in the widget:</string>
+    <string name="show_note_title">Show note title</string>
     <string name="new_note_type">New note type:</string>
     <string name="text_note">Text note</string>
     <string name="lock_note">Lock note</string>
