Simple translation changes

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -17,14 +17,14 @@
     <string name="add_to_note">Adicionar à nota</string>
     <string name="unsaved_changes_warning">Você tem algumas alterações que ainda não foram salvas. O que você gostaria de fazer com elas?</string>
     <string name="note_shown_widget">Exibir nota em um widget:</string>
-    <string name="show_note_title">Show note title</string>
+    <string name="show_note_title">Mostrar título da nota</string>
     <string name="new_note_type">Novo tipo de nota:</string>
     <string name="text_note">Anotações</string>
     <string name="lock_note">Bloquear anotação</string>
     <string name="unlock_note">Desbloquear anotação</string>
     <string name="note_content_locked">O conteúdo da anotação está bloqueado.</string>
     <string name="show_content">Mostrar conteúdo</string>
-    <string name="locking_warning">AVISO: Caso você esqueça da senha, não conseguirá acessar o conteúdo.</string>
+    <string name="locking_warning">AVISO: Caso você esqueça a senha, não conseguirá acessar o conteúdo.</string>
 
     <!-- File notes -->
     <string name="open_file">Abrir arquivo</string>
@@ -45,7 +45,7 @@
     <string name="show_keyboard">Mostrar teclado na inicialização</string>
     <string name="show_word_count">Mostrar contagem de palavras</string>
     <string name="show_character_count">Mostrar contagem de caracteres</string>
-    <string name="alignment">Gravidade</string>
+    <string name="alignment">Alinhamento</string>
     <string name="left">Esquerda</string>
     <string name="center">Centro</string>
     <string name="right">Direita</string>
@@ -55,11 +55,11 @@
     <string name="enable_line_wrap">Ativar quebra de linha</string>
     <string name="use_incognito_mode">Usar o teclado no modo de Navegação Anônima</string>
     <string name="move_done_checklist_items">Mover itens completos da lista de verificação para o final</string>
-    <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
+    <string name="add_new_checklist_items_top">Adicionar novos itens da lista de verificação na parte superior</string>
 
     <!-- Checklists -->
     <string name="checklist">Lista de verificação</string>
-    <string name="checklists">Checklists</string>
+    <string name="checklists">Listas de verificação</string>
     <string name="add_new_checklist_item">Adicionar novo item à lista de verificação</string>
     <string name="add_new_checklist_items">Adicionar novos itens à lista de verificação</string>
     <string name="checklist_is_empty">A lista de verificação está vazia</string>
@@ -76,7 +76,7 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">Simple Notes Pro: To-do list organizer and planner</string>
+    <string name="app_title">Simple Notes Pro: Organizador e planejador de listas de tarefas</string>
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Simple planner: Create notes, backup &amp; to-do lists with quick note reminder tool</string>
     <string name="app_long_description">
