--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -17,14 +17,14 @@
     <string name="add_to_note">Nota ekle</string>
     <string name="unsaved_changes_warning">Kaydedilmemiş bazı değişiklikleriniz var. Onlarla ne yapmak istersiniz?</string>
     <string name="note_shown_widget">Widget\'ta gösterilen not:</string>
-    <string name="show_note_title">Show note title</string>
+    <string name="show_note_title">Not başlığını göster</string>
     <string name="new_note_type">Yeni not türü:</string>
     <string name="text_note">Metin notu</string>
-    <string name="lock_note">Lock note</string>
-    <string name="unlock_note">Unlock note</string>
-    <string name="note_content_locked">The notes\' content is locked.</string>
-    <string name="show_content">Show content</string>
-    <string name="locking_warning">WARNING: If you forget the notes\' password, you won\'t be able to recover it or access the notes\' content anymore.</string>
+    <string name="lock_note">Notu kilitle</string>
+    <string name="unlock_note">Notun kilidini aç</string>
+    <string name="note_content_locked">Notların içeriği kilitlendi.</string>
+    <string name="show_content">İçeriği göster</string>
+    <string name="locking_warning">UYARI: Notların parolasını unutursanız, onu kurtaramaz veya notların içeriğine artık erişemezsiniz.</string>
 
     <!-- File notes -->
     <string name="open_file">Dosya aç</string>
@@ -54,16 +54,16 @@
     <string name="autosave_notes">Notları otomatik kaydet</string>
     <string name="enable_line_wrap">Sözcük kaydırmayı etkinleştir</string>
     <string name="use_incognito_mode">Klavyelerin Gizli modunu kullan</string>
-    <string name="move_done_checklist_items">Tamamlanmamış yapılacak listesi öğelerini en üste taşı</string>
-    <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
+    <string name="move_done_checklist_items">Tamamlanan yapılacak listesi ögelerini en alta taşı</string>
+    <string name="add_new_checklist_items_top">Yeni yapılacak listesi ögelerini en üste taşı</string>
 
     <!-- Checklists -->
     <string name="checklist">Yapılacak listesi</string>
-    <string name="checklists">Checklists</string>
-    <string name="add_new_checklist_item">Yeni bir yapılacak listesi öğesi ekle</string>
-    <string name="add_new_checklist_items">Yeni yapılacak listesi öğeleri ekle</string>
+    <string name="checklists">Yapılacak listeleri</string>
+    <string name="add_new_checklist_item">Yeni bir yapılacak listesi ögesi ekle</string>
+    <string name="add_new_checklist_items">Yeni yapılacak listesi ögeleri ekle</string>
     <string name="checklist_is_empty">Yapılacak listesi boş</string>
-    <string name="remove_done_items">Tamamlanan öğeleri kaldır</string>
+    <string name="remove_done_items">Tamamlanan ögeleri kaldır</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Tüm notları dosya olarak dışa aktar</string>
@@ -84,15 +84,15 @@
 
         Basit not planlayıcı hızlıdır, kullanımı basittir, düzenleyici ve dikkate değer bir planlayıcıdır ve paha biçilmez bir araç ve yardımcı olarak hizmet eder, gerekli bilgi parçasını hatırlamanıza yardımcı olur!
 
-        Hatırlatma aracımız, görevlerinizi takip etmenize, benzeri görülmemiş basitlik, dikkat çekicilik ve rakipsiz zaman tasarrufu değeri ile öğeler veya fikirler için günlük kontrol listesi oluşturmanıza olanak tanır. Programınızı hızlı ve basit bir şekilde yönetin.
+        Hatırlatma aracımız, görevlerinizi takip etmenize, benzeri görülmemiş basitlik, dikkat çekicilik ve rakipsiz zaman tasarrufu değeri ile ögeler veya fikirler için günlük yapılacaklar listesi oluşturmanıza olanak tanır. Programınızı hızlı ve basit bir şekilde yönetin.
 
         Bu not defteri hatırlatma aracı, otomatik kaydetme özelliğiyle birlikte gelir, böylece değişikliklerinizi yanlışlıkla atmazsınız. Aynı zamanda birden çok bağımsız düz metin notu ve çok hızlı listeler oluşturmayı destekler.
 
         Uygulamayı dokunulduğunda açan özelleştirilebilir ve yeniden boyutlandırılabilir widget kullanarak nota kolayca erişebilir ve yapılacaklar listenizi hemen düzenleyebilirsiniz.
 
-        Kullanıcı dostudur ve kesinlikle hiçbir reklam veya gereksiz izinler içermez - hiçbir dize eklenmez. Tamamen açık kaynaklıdır, hızlı ve hızlı ince ayarlarla ayarlanabilen özelleştirilebilir renkler sağlar.
+        Kullanıcı dostudur ve kesinlikle hiçbir reklam veya gereksiz izinler içermez - hiçbir koşul yoktur. Tamamen açık kaynaklıdır, hızlı ve çabuk ince ayarlarla ayarlanabilen özelleştirilebilir renkler sağlar.
 
-        <b>Basit Notlar: Yapılacaklar listesi düzenleyici ve planlayıcı</b> reklamsız kullanabileceğiniz en iyi öğe düzenleyici ve liste planlayıcıdır. Hızlı ve iyi notlar için yüksek kaliteli bir düzenleyiciye, kullanımı gerçekten basit olan güvenilir ve kullanıcı dostu bir hatırlatıcıya ihtiyacınız varsa, hemen uygulamamızı indirin :) Her gün cebinizde kendi kişisel not defteriniz olsun ve bir yedekleme planlayıcınız olsun önemli bir toplantıyı veya alışveriş listenizi unutmak için endişelenmenize gerek kalmayacak :).
+        <b>Basit Notlar: Yapılacaklar listesi düzenleyici ve planlayıcı</b> reklamsız kullanabileceğiniz en iyi öge düzenleyici ve liste planlayıcıdır. Hızlı ve iyi notlar için yüksek kaliteli bir düzenleyiciye, kullanımı gerçekten basit olan güvenilir ve kullanıcı dostu bir hatırlatıcıya ihtiyacınız varsa, hemen uygulamamızı indirin :) Her gün cebinizde kendi kişisel not defteriniz olsun ve bir yedekleme planlayıcınız olsun önemli bir toplantıyı veya alışveriş listenizi unutmak için endişelenmenize gerek kalmayacak :).
 
         Varsayılan olarak materyal tasarım ve koyu tema ile birlikte gelir, kolay kullanım için harika bir kullanıcı deneyimi sağlar. İnternet erişiminin olmaması size diğer uygulamalardan daha fazla gizlilik, güvenlik ve istikrar sağlar.
 
