--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -80,7 +80,7 @@
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Simple planner : créez des notes, des sauvegardes et des to-do lists avec outil de rappel rapide</string>
     <string name="app_long_description">
-        ★ Besoin de prendre en note quelque chose à acheter, une adresse, ou une idée d\'entreprise ? Alors n\'allez pas plus loin : voici l\'outil que vous cherchiez : Simple Notes : organiseur et plannificateur ! Aucune configuration compliquée n'est nécessaire, écrivez simplement ce que vous voulez et créez des notes, des listes, checklists ou sauvegardes pour vos idées. Avec votre bloc-note personnel, vous pouvez vous souvenir de tout rapidement ! Votre liste de courses, vous souvenir de vos pensées ou configurer des rappels pour prendre des notes n'a jamais été aussi simple ★
+        ★ Besoin de prendre en note quelque chose à acheter, une adresse, ou une idée d\'entreprise ? Alors n\'allez pas plus loin : voici l\'outil que vous cherchiez : Simple Notes : organiseur et plannificateur ! Aucune configuration compliquée n\'est nécessaire, écrivez simplement ce que vous voulez et créez des notes, des listes, checklists ou sauvegardes pour vos idées. Avec votre bloc-note personnel, vous pouvez vous souvenir de tout rapidement ! Votre liste de courses, vous souvenir de vos pensées ou configurer des rappels pour prendre des notes n\'a jamais été aussi simple ★
 
         Simple notes planner is quick, simple to use organizer and remarkable planner and it will serve as an invaluable tool and companion, helping you to remember necessary piece of information!
 
